@@ -1,7 +1,7 @@
 Package: polmineR
 Type: Package
 Title: Toolkit for Corpus Analysis
-Version: 0.7.1.9003
+Version: 0.7.1.9004
 Date: 2017-03-06
 Author: Andreas Blaette
 Maintainer: Andreas Blaette <andreas.blaette@uni-due.de>
@@ -17,6 +17,7 @@ Imports:
 Suggests:
     parallel,
     polmineR.sampleCorpus,
+    polmineR.Rcpp,
     rcqp,
     doParallel,
     markdown,
